--- a/style.css
+++ b/style.css
@@ -329,9 +329,9 @@
 
 @media screen and (max-width:390px){
  .abtcontainer .hint{
-     
-    margin-left: 50px ;
-    margin-top:80px ;
+    position:relative; 
+    margin-left: 30px ;
+    margin-top:30px ;
     }
     .abtcontainer .image5{
       width: 55%;
@@ -562,7 +562,7 @@
         }
         .formcontainer i{
             position: absolute;
-/*             margin-right: 200px; */
+            margin-left: 30px;
             font-size: large;
             margin-top: 7px;
         
