--- a/style.css
+++ b/style.css
@@ -562,7 +562,7 @@
         }
         .formcontainer i{
             position: absolute;
-            margin-left: 120px;
+            margin-left: 105px;
             font-size: large;
             margin-top: 7px;
         
@@ -572,7 +572,7 @@
             font-size: 14.2px;
         }
         .formcontainer  .send{
-            position: relative;
+/*             position: relative; */
             margin-bottom: 200px;
             width: 10%;
             margin-left: 40px;
