--- a/style.css
+++ b/style.css
@@ -529,7 +529,7 @@
         }
         .formcontainer  .field{
             width: 70%;
-            /* position: relative; */
+            position: relative;
              margin-left: 18px;
              margin-top: 90px;
              /* border: 1px solid red; */
