--- a/style.css
+++ b/style.css
@@ -519,20 +519,24 @@
         }
     
     }
-    @media screen and (min-width:100px) and (max-width:667px) {
+     @media screen and (min-width:100px) and (max-width:667px) {
         .formcontainer  .sh2{
-          display:none;
+            display: none;
         }
         .formcontainer  .sh1{
-        display:none;
+            display: none;
         
         }
+        .formcontainer{
+           height:300px;
+        }
+           
         .formcontainer  .field{
             width: 70%;
-            position: relative;
-             margin-left: 50px;
+            /* position: relative; */
+             margin-left: 18px;
              margin-top: 90px;
-             border: 1px solid red;
+             /* border: 1px solid red; */
          /* padding-bottom: 40px; */
         }
         .formcontainer  .para{
@@ -540,7 +544,6 @@
             width: 80%;
             /* border: 1px solid red; */
             margin-top: 0;
-           position: relative;
         
         }
         .formcontainer  .box{
@@ -553,7 +556,7 @@
             /* margin-bottom: 20px; */
         }
         .formcontainer  button{
-           position:relative;
+            position: relative;
             padding: 5px 86px;
             margin-top: 10px;
             /* margin-left: 9px; */
@@ -563,7 +566,7 @@
         }
         .formcontainer i{
             position: absolute;
-            margin-left: 85px;
+            margin-right: 200px;
             font-size: large;
             margin-top: 7px;
         
@@ -573,17 +576,16 @@
             font-size: 14.2px;
         }
         .formcontainer  .send{
-/*             position: relative; */
+            position: relative;
             margin-bottom: 200px;
             width: 10%;
-            margin-left: 80px;
+            margin-right: 20px;
             
             /* margin-left: 150px; */
         }
         .formcontainer  .send img{
             width: 30px;
             height: 30px;
-           
         }
     
     }
